--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@editorjs/header",
+  "name": "editorjs-header",
   "version": "2.8.8",
   "keywords": [
     "codex editor",
     "header",
+    "br",
     "heading",
     "editor.js",
     "editorjs"
   ],
-  "description": "Heading Tool for Editor.js",
+  "description": "Heading Tool with br for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/editor-js/header",
+  "repository": "https://github.com/TBarborik/editorjs-header-with-break",
   "files": [
     "dist"
   ],
